chamber/css/chamber.css
@import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda:opsz@6..96&family=Yanone+Kaffeesatz&display=swap');
#content{
    margin: 0 auto;
    font-family: 'Yanone Kaffeesatz', sans-serif;
    font-size: 15pt;
}
header{
    display: grid;
    grid-template-columns: 20% 40% 20% 20%;
    grid-template-rows: 1fr 1fr;
    font-size: 10pt;
    font-family: 'Bodoni Moda', serif;
    align-items: center;
    background-color: rgb(173, 216, 230);
    padding-bottom: 52px
}
header p:nth-child(1){
    display: none;
    grid-row: 1/2;
    grid-column: 1/5;
    text-align: center;
    color:rgb(6, 6, 74);
    border: 1pt solid rgb(6, 6, 74);
    padding: 7pt;
}
.caption{
    font-family: 'Bodoni Moda', serif;
    margin-top: -1em;
}
.logo1 {
    width: 60%;
    height: auto;
    padding: 1em;
}
.entireName{
    display: flex;
    flex-direction: column;
    margin-right: -1em;
    color:rgb(6, 6, 74);
}
.social-media{
    width: 40%;
    height: auto;
}
.socials{
    padding: 1em;
}
.date{
    grid-row: 2/3;
    grid-column: 1/5;
    color: rgb(6, 6, 74);
    background-color: rgba(6, 6, 74, 0.09);
    padding: 1em;
    font-size: 10pt;
    text-align: center;
    margin-top: 50px
}
nav button{
    margin: .2rem 2vw;
    border: none;
    font-size: 2rem;
    text-align: right;
}
#hamburgerBtn{
    text-align: right;
    color: rgb(6, 6, 74);
    background-color: transparent;
}
nav ul{
    list-style-type: none;
    padding: 0;
    margin: 0;
}
nav ul li a{
    display: block;
    padding: .8rem 2vw;
    text-decoration: none;
    color: white;
    border-top: 1px solid white;
    text-align: right;
}
nav ul li.active{
    background-color: rgba(0, 0, 0, 0.2);
    color: white;
}
nav ul li a:hover{
    background-color: lightblue;
    color: rgb(6, 6, 74);
}
nav ul{
    display: none;
}
nav ul.open{
    display: block;
    background-color: rgb(6, 6, 74);
}  
#hamburgerBtn span:nth-child(1){
    display: block;
}
#hamburgerBtn span:nth-child(2){
    display: none;
}
#hamburgerBtn.open span:nth-child(1){
    display: none;
}
#hamburgerBtn.open span:nth-child(2){
    display: block;
} 
#entireNav{
    position: absolute;
    left: 82%;
    top: 2%
}
#primaryNav{
    position:relative;
    left: 20%;
}
.logo2{
    width: 20%;
    height: auto;
    padding: 1em;
} 
.textbox{
    height: 100%;
    padding: 1em;
    border: solid;
    margin: 1em;
    padding-top: 0.5em;
}
#spotlight1, #spotlight2, #spotlight3{
    height: 100%;
    padding: 1em;
    border: solid;
    margin: 1em;
    padding-top: 0.5em;
}
#spotlights{
    height: 100%;
    border: solid;
    margin: 1em;
}
footer{
    text-align: center;
    padding: 1em;
    background-color: lightblue;
}
.location{
    width:5%
}
#spotlight3, #join{
    display: none;
    visibility: hidden;
}
#hero{
    position: relative;
    padding-top: 20px;
    padding-right: 20px;
    background-color: rgb(6, 6, 74);
}
#hero img{
    width: 100%;
    height: auto;
}
#hero button{
    border-radius: 12px;
    background-color: lightblue;
    color: rgb(6, 6, 74);
    padding: 10px;
    font-size: 15pt;
    position: absolute;
    right: 40px;
    bottom: 50px;
    box-shadow: 0px 0px 2px 2px rgb(6, 6, 74);
}
#hero button:hover{
    background-color: white;
    transition: 0.5s;
    box-shadow: none;
}
#hero h2{
    color: rgb(6, 6, 74);
    position: absolute;
    left: 50px;
 }
 #event{
    background-color: rgb(6, 6, 74);
    color: white;
    position: relative;
    padding-top: 20px;
 }
 #event img{
    width: 100%;
    height: auto;
}
#event h2{
    position: absolute;
    left: 50px;
    color: rgb(6, 6, 74);
}
#weather{
    position: relative;
    background-color: rgb(6, 6, 74);
    color: white;
    margin: 0px 60px 0px 60px
}
#weather img{
    position: absolute;
    right: 50px;
    top: 30px;
    width: 20%;
    height:auto;
}
#newsrelease{
    background-color: rgb(6, 6, 74);
    color: white;
}
#spotlights{
    background-color: rgb(6, 6, 74);
    position: relative;
}
#spotlight1, #spotlight2, #spotlight3{
    background-color: white;
    color: rgb(6, 6, 74);
    text-align: center;
}
#spotlight1 img, #spotlight2 img, #spotlight3 img{
    width: 100%;
    height: auto;
}
#spotlight1 p, #spotlight2 p, #spotlight3 p{
    margin: 0;
    padding: 4px
}
#spotlight1 h2, #spotlight2 h2, #spotlight3 h2{
    position: absolute;
    left: 60px;
    padding: 10px;
    background-color: rgb(6, 6, 74);
    color: white;
    border-radius: 12px;
}

/* the medium size */

@media only screen and (min-width: 600px){
    header{
        display: grid;
        grid-template-columns: 20% 45% 20% 15%;
        grid-template-rows: 1fr 1fr;
        font-size: 15pt;
    }
    .date{
        font-size: 12pt;
    }
    #content{
        font-size: 15pt;
    }
    main{
        display: grid;
        grid-template-columns: .5fr .05fr .45fr;
        grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
        grid-template-rows: 20% 10% 20% 7% 17%;
        grid-gap: 2.25em 0em 
    }
    #hero{
        grid-column: 1/4;
        grid-row: 1/2;
    }
    #newsrelease{
        grid-column: 1/4;
        grid-row: 2/3;
    }
    #spotlights{
        grid-column: 1/4;
        display: grid;
        grid-template-columns: 1fr 1fr;
        grid-template-rows: 1fr;
        height: 100%;
        padding: 10px 20px 20px;
    }
    #spotlight1{
        grid-column: 1/2;
        grid-row: 1/2;
        height: 100%;
        margin-right: 5px;
        margin: 0;
        padding: 0;
        margin-right: 5px;
    }
    #spotlight2{
        grid-column: 2/4;
        grid-row: 1/2;
        height: 100%;
        margin-left: 5px;
        margin: 0;
        padding: 0;
        margin-left: 5px;
    }
    #spotlight2 h2, #spotlight1 h2, #spotlight3 h2{
        padding: 10px 20px 20px
    }
    #spotlight3{
        display: none;
        visibility: hidden;
    }
    #join{
        display: block; 
        visibility: visible;
        grid-column: 1/4;
        grid-row: 4/5;
    }
    #event{
        height: 100%;
        grid-column: 1/3;
        grid-row: 5/6;
        margin-right: 0;
    }
    #weather{
        height: 100%;
        grid-column: 3/4;
        grid-row: 5/6;
        margin: 20px 20px 10px 10px
    }
    .notspotlight{
        height: 100%;
        padding: 1em;
        border: solid;
        margin: 1em;
        padding-top: 0.5em;
    }
    .logo2{
        width: 90%;
    }
    footer{
        margin: 0 auto;
        font-family: 'Yanone Kaffeesatz', sans-serif;
        font-size: 15pt;
        display:grid;
        grid-template-columns: 20% 50% 30%;
        margin-top: -250px
    }
    .section1{
        text-align: left;
        align-items: center;
        font-size: 17pt;
        margin-top: 1em;
        padding-left: 1em;
    }
    .section2{
        align-items: center;
        font-size: 12pt;
        margin-top: 2em;
    }
    .section3{
        grid-column: 1/4;
        grid-row:2/3;
        font-size: 12pt;
        margin-top: 1em;
    }
    .location{
        width:15%;
    }
    #hero button{
        right: 50px;
        bottom: 100px;
        font-size: 25px;
    }
    #join button{
        border-radius: 12px;
        background-color: lightblue;
        color: rgb(6, 6, 74);
        padding: 10px;
        font-size: 30px;
        box-shadow: 0px 0px 2px 2px rgb(6, 6, 74);
        width: 100%;
    }
    #join button:hover{
        background-color: white;
        transition: 0.5s;
        box-shadow: none;
    }
    #join{
        text-align: center;
        background-color: rgb(6, 6, 74);
        color:white
    }
    #weather{
        padding-top: 20px;
    }
    #spotlight2 h2{
        left: 430px;
    }
    #entireNav{
        position: absolute;
        left: 82%;
        top: 6%
    }
    #primaryNav{
        position:relative;
        left: 20%;
    }
}

/* the large size */

@media only screen and (min-width: 1200px){
    header{
        font-size: 15pt;
        grid-template-columns: repeat(4, 1fr);
        grid-template-rows: 1fr;
        padding-bottom: 2em;
    }
    .entireName{
        padding-right: 2em;
        padding-bottom: 1em
    }
    .logo1{
        width:60%;
        padding-right: 0;
    }
    .socials{
        width: 50%;
        text-align: right;
        margin-left: 2em;
    }
    .date{
        font-size: 15pt;
        grid-row: 3/4;
    }
    nav button{
        display: none;
    }
    #primaryNav{
        position:static;
        display: grid;
        grid-template-columns: 1fr 1fr 1fr 1fr;
        grid-column: 3/4;
        grid-row: 2/3;
    }
    #entireNav{
        position: static;
        grid-column: 3/4;
        grid-row: 1/2;
    }
    nav ul li a {
        border: none;
        font-size: 15pt;
        background-color: rgb(6, 6, 74);
    }
    .socials{
        grid-column:4/5;
    }
    #content{
        font-size: 15pt;
        margin-right: 0;
    }
    main{
        display: grid;
        grid-template-columns: .25fr .5fr .25fr;
        grid-template-rows: .2fr .4fr .2fr;
        grid-gap: 2.25em 0;
        margin: 0 100px 0 100px;
        font-size: 10pt;
    }
    #event{
        grid-column: 1/2;
        grid-row: 1/2;
        margin: 1em 0.25em 1em 1em;
    }
    #hero{
        grid-column: 2/3;
        grid-row: 1/3;
        margin: 1em 0.25em 1em 0.25em;
    }
    #spotlights{
        display:grid;
        grid-template-columns: 1fr;
        grid-template-rows: 1fr 1fr 1fr;
        grid-column: 3/4;
        grid-row: 1/4;
        margin: 1em 1em 1em 0.25em;
        padding: 0.75em;
    }
    #weather{
        grid-column: 1/2;
        grid-row: 2/3;
        margin: 1em 0.25em 1em 1em;
    }
    #join{
        grid-column: 1/2;
        grid-row: 3/4;
        margin: 1em 0.25em 1em 1em;

    }
    #newsrelease{
        grid-column: 2/3;
        grid-row: 3/4;
        margin: 1em 0.25em 1em 0.25em;
    }
    #spotlight1{
        grid-column: 1/4;
        grid-row: 1/2;
        margin: 0
    }
    #spotlight2{
        grid-column: 1/4;
        grid-row: 2/3;
        margin: 0
    }
    #spotlight3{
        display: block; 
        visibility: visible;
        grid-column: 1/4;
        grid-row: 3/4;
        margin: 0;
        padding:0
    }
    footer{
        font-size: 1pt;
        margin:0;
        padding:0;
        margin-top: 100px
    }
    .logo2{
        width: 50%;
        margin: 30px 0px 0 60px
    }
    .section1{
        font-size: 20pt;
        margin-top: 0;
    }
    .section2{
        font-size: 15pt;
        margin-top: 0;
    }
    .section3{
        font-size: 15pt;
        margin-top: 0;
    }
    #hero img{
        height:100%;
    }
    #hero{
        margin-bottom: 0;
    }
    #spotlight1 h2, #spotlight2 h2, #spotlight3 h2{
        left: 30px;
        font-size: 15pt;
    }
    #join button, #join p{
        margin-top: 60px;
        margin-bottom: 0;
    }
    #event img, #event h2, #event p{
        padding-top:20px;
        padding-bottom:0 
    }
    #newsrelease{
        text-align: center;
        margin-top: 20px;
        margin-bottom: -30px
    }
    h2{
        font-size: 20pt
    }
} 

